--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 /.bundle/
+/.ruby-version
 /bin/
+/spec/fixtures/.librarian/
+/spec/fixtures/.tmp/
+/spec/fixtures/modules/boxen/
+/spec/fixtures/modules/homebrew/
+/spec/fixtures/modules/stdlib/
+/spec/fixtures/modules/xquartz/
+/spec/fixtures/vendor/
